# c-cpp-grammar

./: .gitignore  CMakeLists.txt  README.md  hello.c
C/2-const/: const.c
C/3-storage-class/: storage-class.c
C/4-array/: array.c
C/6-pointer/: pointer.c
C/7-func-pointer/: func-pointer.c
c/1-bytes/: hello.c
c/10-macro/: macro.c
c/11-header/: heaader.h  header-invoker.c
c/12-memory-management/: memory-management.c
c/2-const/: const.c
c/3-storage-class/: storage-class.c
c/5-enum/: enum.c
c/8-struct/: struct.c
c/9-typedef/: typedef.c
cpp/: hello.cpp
cpp/1-hello/: hello.cpp
cpp/2-string/: string.cpp
