cmake_minimum_required(VERSION 3.17)
project(c_cpp_grammar)

set(CMAKE_CXX_STANDARD 11)

add_executable(hello c/1-bytes/hello.c)
add_executable(const c/2-const/const.c c/4-array/array.c)
add_executable(storage-class c/3-storage-class/storage-class.c)
add_executable(array c/4-array/array.c)
add_executable(enum c/5-enum/enum.c)
add_executable(pointer c/6-pointer/pointer.c)
add_executable(func-pointer c/7-func-pointer/func-pointer.c)
add_executable(struct c/8-struct/struct.c)
add_executable(typedef c/9-typedef/typedef.c)
add_executable(macro c/10-macro/macro.c)
add_executable(header-invoker c/11-header/header-invoker.c)
add_executable(memory-management c/12-memory-management/memory-management.c)
